fixed compact cards text overflow

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1814,9 +1814,9 @@ main > div .listing-cards { padding-left: 0; padding-right: 0; }
 
 .card-compact figure img { object-fit: cover; width: 100%; height: 100%; }
 
-.card-compact h3 { text-align: left; color: #1D2C27; font-size: 1.2rem; background-color: transparent; border-top: 0.33816rem solid #FFFFFF; }
+.card-compact h3 { text-align: left; color: #1D2C27; font-size: 1.2rem; background-color: transparent; border-top: 0.33816rem solid #FFFFFF; position: relative; }
 
-.card-compact h3 > a { display: block; box-sizing: border-box; width: 100%; height: 100%; padding: 1.9rem; text-align: right; color: inherit; }
+.card-compact h3 > a { display: block; box-sizing: border-box; width: 100%; height: 100%; padding: 1.9rem; text-align: left; color: inherit; }
 
 .card-compact.representative-image h3 { text-align: left; color: #FFFFFF; font-size: 1.2rem; background-color: transparent; border-top: 0.33816rem solid #FFFFFF; }
 
@@ -1826,7 +1826,15 @@ main > div .listing-cards { padding-left: 0; padding-right: 0; }
 
 @media only screen and (min-width: 46.25em) { .card-compact { border-bottom: 0.60118rem solid #FFFFFF; } }
 
-.card-compact h3 { position: absolute; margin: -6.00488rem 0 0 0; padding: 0; border-top: unset; font-weight: 700; padding: 1.9rem; }
+.card-compact.representative-image h3 { position: absolute; margin: -6.00488rem 0 0 0; padding: 0; border-top: unset; font-weight: 700; padding: 1.9rem; }
+
+@media only screen and (min-width: 46.25em) { .card-compact.representative-image h3 { padding: 0; } }
+
+.card-compact.representative-image h3 a { padding: 1.9rem 0; }
+
+@media only screen and (min-width: 46.25em) { .card-compact.representative-image h3 a { padding: 1.9rem; } }
+
+.card-compact h3 { position: relative; margin: -4.50367rem 0 0 0; padding: 0; border-top: unset; font-weight: 700; padding: 1.9rem; }
 
 @media only screen and (min-width: 46.25em) { .card-compact h3 { padding: 0; } }
 
